--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["Will Boyd <whboyd@wesleyan.edu>"]
 [dependencies]
 glium = "*"
 time = "*"
+wavefront_obj = "*"
 
 log = "*"
 env_logger = "*"
