Refactor object model to allow model sharing.
Previously, every rendered instance of a given model would need to be its own
instance all the way down to memory. This allows sharing in memory, and lays
the groundwork for sharing in VRAM, as well.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ authors = ["Will Boyd <whboyd@wesleyan.edu>"]
 
 [dependencies]
 glium = "*"
+# Image 0.12+ depends on too new a version of Rust. We're using rustc 1.12.
+# (This was determined by trial and error, so way to go everyone involved for not documenting this stuff.)
+image = "0.11"
 time = "*"
 wavefront_obj = "*"
 
