Use error-chain for better, mor uniform, more complete error handling

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.0.1"
 authors = ["Will Boyd <whboyd@wesleyan.edu>"]
 
 [dependencies]
+error-chain = { version = "0.8", default-features = false }
 glium = "*"
 # Image 0.12+ depends on too new a version of Rust. We're using rustc 1.12.
 # (This was determined by trial and error, so way to go everyone involved for not documenting this stuff.)
